--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:wght@100;300;400;500;800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:wght@100;300;400;500;800&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 :root {
   --color-white: #fff;
@@ -30,16 +31,19 @@
 }
 
 html {
-  font-family: "Raleway";
+  /* font-family: "Raleway"; */
+  font-family: "Lato";
   background-color: var(--color-black);
 }
 
 input {
-  font-family: "Raleway";
+  font-family: "Lato";
+
 }
 
 button {
-  font-family: "Raleway";
+  font-family: "Lato";
+
   cursor: pointer;
 }
 
@@ -58,7 +62,7 @@ p {
 .flex__justify {
   display: flex;
   justify-content: space-between;
-  place-items: center;
+  align-items: center;
 }
 
 .flex__center {
