--- a/src/app/pages/car-detail-page/car-detail-page.component.html
+++ b/src/app/pages/car-detail-page/car-detail-page.component.html
@@ -1,2 +1,3 @@
-<carousel-main [images]="images" [autoSlide]="false"></carousel-main>
-<car-info></car-info>
+<!-- <carousel-main [images]="car.img" [autoSlide]="false"></carousel-main> -->
+<carousel-main [images]="car.img"></carousel-main>
+<car-info [car]="this.car"></car-info>
