--- a/src/app/components/car-info/car-info.component.html
+++ b/src/app/components/car-info/car-info.component.html
@@ -1,15 +1,16 @@
 <section class="box">
-  <main *ngFor="let car of cars">
+  <main>
     <div class="brand">
-      <h2>{{ car.brandName }}</h2>
+      <h2>{{ car.name }}</h2>
+      <p>{{ car.brandName }}</p>
+
     </div>
     <div class="stars">
-      <p class="star_p">
-        5.0<span><i class="bx bxs-star"></i></span>
+      <p class="star_p">{{car.rating}}<span><i class="bx bxs-star"></i></span>
       </p>
     </div>
-    <div class="four-grid" *ngFor="let detail of car.topDetails">
-      <div class="plus-icon">
+    <div class="four-grid" >
+      <div class="plus-icon" *ngFor="let detail of car.topDetails">
         <img [src]="detail.icon" [alt]="detail.type" />
         <p>{{ detail.detail }}</p>
       </div>
@@ -22,10 +23,10 @@
       </p>
     </div>
 
-    <div class="features" *ngFor="let feature of car.features">
+    <div class="features" >
       <p class="bold">Features</p>
       <div class="two-grid">
-        <div class="plus-icon item">
+        <div class="plus-icon item" *ngFor="let feature of car.features">
           <img [src]="feature.icon" [alt]="feature.feature" />
           <p>{{ feature.feature }}</p>
         </div>
@@ -39,40 +40,40 @@
 
     <div class="guidelines">
       <p class="bold">guidelines</p>
-      <p class="description">{{ car.description.guidelines }}/p></p>
+      <p class="description">{{ car.description.guidelines }}</p>
     </div>
 
-    <div class="rating" *ngFor="let rating of car.ratingsAndReviews">
+    <div class="rating" >
       <p class="bold">rating</p>
       <div class="container">
-        <div class="skill-box">
-          <span class="title">{{rating.basedon}}</span>
+        <div class="skill-box" *ngFor="let rating of car.ratingsAndReviews">
+          <span class="title">{{ rating.label }}</span>
 
           <div class="skill-bar">
             <span class="skill-per html">
-              <span class="tooltip">90%</span>
+              <span class="tooltip">{{ rating.value }}</span>
             </span>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="host" *ngFor="let host of car.host">
+    <!-- <div class="host">
       <h2>Host</h2>
       <div class="host__profile">
-        <h2 class="host-name">{{ host.name }}</h2>
+        <h2 class="host-name">{{ car.host.name }}</h2>
         <p class="main_p">
-          {{ host.rating }}<span><i class="bx bxs-star"></i></span>
+          {{ car.host.rating }}<span><i class="bx bxs-star"></i></span>
         </p>
         <div class="host__flex">
-          <p class="main_p">{{ host.trips }} trips</p>
-          <p class="main_p">Joined {{ host.joined }}</p>
+          <p class="main_p">{{ car.host.trips }} trips</p>
+          <p class="main_p">Joined {{ car.host.joined }}</p>
         </div>
-        <p class="lite_p">Typically responds in {{ host.responseTime }}</p>
+        <p class="lite_p">Typically responds in {{ car.host.responseTime }}</p>
       </div>
-    </div>
+    </div> -->
 
-    <div class="reviews" *ngFor="let host of car.host">
+    <div class="reviews">
       <p class="bold lite">reviews</p>
 
       <div class="review__box" *ngFor="let review of car.reviews">
@@ -93,13 +94,12 @@
       </div>
     </div>
   </main>
-  <booking></booking>
+  <booking [car]="this.car" ></booking>
 </section>
 
-<div class="modal" *ngFor="let car of cars">
+<div class="modal">
   <div class="card">
     <span class="close">&times;</span>
-    <h2>Extras</h2>
     <h2>{{ car.description.deluxeClass.title }}</h2>
     <p class="p">
       {{ car.description.deluxeClass.CTA }}
