--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -1,8 +1,3 @@
-label {
-  font-size: 0.9rem;
-  font-weight: 500;
-}
-
 .input {
   border-radius: 0.2rem;
   width: 100%;
@@ -28,7 +23,7 @@ label {
 
 .form-btn:hover {
   box-shadow: none;
-  background: var(--color-ash);
+  background: var(--color-ash);;
   border: 1px solid var(--color-white);
 }
 
@@ -36,7 +31,6 @@ label {
   margin: 0;
   font-size: 1rem;
   color: var(--color-ash);
-  padding-top: 8px;
 }
 
 .sign-up-link {
@@ -46,7 +40,6 @@ label {
   color: var(--color-black);
   cursor: pointer;
   font-weight: 600;
-  transition: all 0.4s ease;
 }
 
 .sign-up-link:hover {
@@ -84,6 +77,14 @@ label {
 }
 
 
+.input:focus ~ label,
+.input:valid ~ label,
+.input:invalid ~ label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: var(--color-black);
+  padding: 0 0.2em;
+  color: var(--color-white);
+}
 
 .page-link {
   text-decoration: underline;
@@ -107,18 +108,22 @@ label {
   display: flex;
   flex-direction: column;
   gap: 5px;
+
 }
 
 .error-span span {
   color: var(--color-error);
-  /* position: absolute;
-  right: 0rem; */
+  position: absolute;
+  right: 0rem;
   text-align: center;
-  font-size: 12px;
-  bottom: 5.6rem;
+  font-size: 15px;
+  font-weight: 600;
 }
 
-
+.is-invalid {
+  border: 1px solid var(--color-error);
+  color: var(--color-error);
+}
 
 .container {
   padding: 0;
@@ -133,7 +138,7 @@ video {
 
 .form-container {
   width: 350px;
-  height: auto;
+  height: auto; 
   /* border: 1px solid var(--grey-secondary); */
   border-radius: 10px;
   box-sizing: border-box;
@@ -172,14 +177,13 @@ video {
 .input {
   border-radius: 0.2rem;
   width: 100%;
-  border: 1px solid var(--grey-secondary);
+  border: 1px solid var(--color-white);
   outline: 0 !important;
   box-sizing: border-box;
   padding: 12px 15px;
   background-color: transparent;
   transition: all 0.4s;
-  color: var(--grey-secondary);
-  font-weight: 600;
+  color: var(--color-white);
 }
 
 .separator-container {
@@ -198,72 +202,10 @@ video {
 .separator-text {
   font-size: 16px;
   font-weight: bold;
-  color: var(--color-black);
 }
 
 .auth__container {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-}
-
-.eye {
-  position: absolute;
-  bottom: 1.15rem;
-  transform: translateY(-40%);
-  width: 1.2rem;
-}
-
-.eye-span {
-  position: absolute;
-  /* bottom: -38%; */
-  bottom: 3%;
-  right: 34px;
-  cursor: pointer;
-}
-
-.input-box {
-  position: relative;
-}
-
-
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 10px;
-  justify-content: space-between;
-}
-
-.flex-row > div > label {
-  font-size: 14px;
-  color: var(--color-black);
-  font-weight: 400;
-}
-
-.span {
-  font-size: 14px;
-  margin-left: 5px;
-  color: var(--grey-secondary);
-  font-weight: 500;
-  cursor: pointer;
-  transition: all .2s ease;
-}
-
-.span:hover {
-  text-decoration: underline;
-}
-
-.row {
-  display: flex;
-}
-
-.error-border {
-  border: 1px solid var(--color-error);
-}
-
-
-.is-invalid {
-  border: 1px solid var(--color-error);
-  color: var(--color-error);
 }
