--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,10 @@
 <div class="nav">
-  <img src="../assets/img/logos/logo.png" alt="logo" class="logo" routerLink="/" />
+  <img
+    src="../assets/img/logos/logo.png"
+    alt="logo"
+    class="logo"
+    routerLink="/"
+  />
 
   <nav class="top__nav">
     <ul>
@@ -19,5 +24,7 @@
     </ul>
   </nav>
 
-  <button class="top__nav--btn">Drive Now</button>
+  <button class="top__nav--btn">
+    <a href="/authentication">Drive Now</a>
+  </button>
 </div>
